# OAF_2

./: .codecov.yml  .travis.yml  BigNum.cpp  BigNum.h  CMakeLists.txt  README.md  main.cpp
app/: CMakeLists.txt  main.cpp
src/: BigNum.cpp  Bignum.cpp  CMakeLists.txt  multiply.cpp
src/headers/: BigNum.h  Bignum.h  Bignum_exceptions.h
tests/: CMakeLists.txt  cpyCtor_op=.cpp  ctor.cpp  operator(mul).cpp  operator+.cpp  streamOperators.cpp
unit_tests/: CMakeLists.txt  cpyCtor_op=.cpp  ctor.cpp  exceptions.cpp  operator+.cpp  operatorMul.cpp  streamOperators.cpp
